--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -55,12 +55,18 @@ p{
         border: solid 1px $theme-alert;
         color: $theme-alert;
         display: inline-block;
-        padding: 12px 45px; 
+        padding: 12px 60px; 
         cursor: pointer;
+        transition: all 0.7s;
         
         &:hover{
+            
+            background: $theme-color;
+            color: #fff;
+            
             i{
                 transform: translate(3px,1px);
+                color: #fff;
             }
         }
         
@@ -69,7 +75,7 @@ p{
             line-height: 14px;
             margin-left: 5px;
             transform: translate(0px,1px) ;
-            transition: all 0.5s;
+            transition: all 0.7s;
             
         }
     }
@@ -89,20 +95,11 @@ p{
         left: 0px;
         height: 100%;
         width: 100%;
-        background-image: url(../images/keyvisual.jpg);
+        background-image: url(../images/KV02.jpg);
         background-size: auto 100%;
         background-position: center;
         background-repeat: no-repeat;
         z-index: 0;
-        -webkit-mask-image: -webkit-gradient(
-            linear, left top, right top, 
-            color-stop(0.00,  rgba(0,0,0,0)),
-            color-stop(0.08,  rgba(0,0,0,0)),
-            color-stop(0.23,  rgba(0,0,0,1)),
-            color-stop(0.40,  rgba(0,0,0,1)),
-            color-stop(0.80,  rgba(0,0,0,1)),
-            color-stop(0.92,  rgba(0,0,0,0)),
-            color-stop(1.00,  rgba(0,0,0,0)));
     }
 }
 
@@ -156,6 +153,7 @@ p{
             transition: all 0.7s;
             color: #eee;
             
+            
             &:hover{
                 background: #9e6821;
                 color: #fff;
@@ -177,11 +175,11 @@ p{
     position: fixed;
     background: $nav-color;
     width: 100%;
-    padding: 20px 25px;
+    padding: 15px 25px;
     top: 0px;
     left: 0px;
     .logo-box{
-        max-width: 150px;
+        max-width: 110px;
         img{
             display: none;
         }
@@ -192,7 +190,12 @@ p{
     }
     .navi-box{
         ul{
-            padding: 10px 0;
+            padding: 5px 0;
+        }
+        
+        .contact-btn{
+            margin-right: 0px;
+            margin-left: 10px;
         }
     }
 }
@@ -205,21 +208,33 @@ p{
     
     .footer-zone{
         background-color: $footer-color;
+//        background-image: url(../images/10footertexture.png);
         padding: 35px;
     }
     
     .container{
         max-width: 1280px;
         margin: 0 auto;
-       display: flex;
+        text-align: center;
+        
+        
         .box{
             text-align: center;
-            padding: 10px 25px;
-            width: 33.33%;
+            padding: 10px 35px;
+            display: inline-block;
+            vertical-align: middle;
+            
+            &:nth-child(1){
+                text-align: right;
+            }
+
+            &:nth-child(3){
+                text-align: left;
+            }
             
             &:nth-child(2){
-                border-right: solid 1px #fff;
-                border-left: solid 1px #fff;
+                border-right: solid 1px rgba(256,256,256,0.5);
+                border-left: solid 1px rgba(256,256,256,0.5);
             }
         }
         
@@ -230,9 +245,9 @@ p{
             height: 45px;
             width: 45px;
             line-height: 45px;
-            margin-top: 3px;
             text-align: center;
             transition: all 0.7s;
+            margin-right: 94px;
             
             &:hover{
                 color: $theme-color;
