--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -121,28 +121,35 @@ p {
   border: solid 1px #8a2b1e;
   color: #8a2b1e;
   display: inline-block;
-  padding: 12px 45px;
+  padding: 12px 60px;
   cursor: pointer;
+  transition: all 0.7s;
 }
 /* line 62, ../sass/_main_style.scss */
-.main-container .btn:hover i {
-  transform: translate(3px, 1px);
+.main-container .btn:hover {
+  background: #b28850;
+  color: #fff;
 }
 /* line 67, ../sass/_main_style.scss */
+.main-container .btn:hover i {
+  transform: translate(3px, 1px);
+  color: #fff;
+}
+/* line 73, ../sass/_main_style.scss */
 .main-container .btn i {
   font-size: 18px;
   line-height: 14px;
   margin-left: 5px;
   transform: translate(0px, 1px);
-  transition: all 0.5s;
+  transition: all 0.7s;
 }
 
-/* line 80, ../sass/_main_style.scss */
+/* line 86, ../sass/_main_style.scss */
 .header {
   background-color: #4b4a47;
   min-height: 100vh;
 }
-/* line 84, ../sass/_main_style.scss */
+/* line 90, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -151,137 +158,150 @@ p {
   left: 0px;
   height: 100%;
   width: 100%;
-  background-image: url(../images/keyvisual.jpg);
+  background-image: url(../images/KV02.jpg);
   background-size: auto 100%;
   background-position: center;
   background-repeat: no-repeat;
   z-index: 0;
-  -webkit-mask-image: -webkit-gradient(linear, left top, right top, color-stop(0, transparent), color-stop(0.08, transparent), color-stop(0.23, black), color-stop(0.4, black), color-stop(0.8, black), color-stop(0.92, transparent), color-stop(1, transparent));
 }
 
-/* line 109, ../sass/_main_style.scss */
+/* line 106, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 114, ../sass/_main_style.scss */
+/* line 111, ../sass/_main_style.scss */
 .nav-zone:first-child {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 119, ../sass/_main_style.scss */
+/* line 116, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 123, ../sass/_main_style.scss */
+/* line 120, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 127, ../sass/_main_style.scss */
+/* line 124, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 132, ../sass/_main_style.scss */
+/* line 129, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 134, ../sass/_main_style.scss */
+/* line 131, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 137, ../sass/_main_style.scss */
+/* line 134, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 143, ../sass/_main_style.scss */
+/* line 140, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 147, ../sass/_main_style.scss */
+/* line 144, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 153, ../sass/_main_style.scss */
+/* line 150, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 159, ../sass/_main_style.scss */
+/* line 157, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 164, ../sass/_main_style.scss */
+/* line 162, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
 
-/* line 171, ../sass/_main_style.scss */
+/* line 169, ../sass/_main_style.scss */
 .no-opacity {
   opacity: 1 !important;
 }
 
-/* line 175, ../sass/_main_style.scss */
+/* line 173, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
   background: #32312e;
   width: 100%;
-  padding: 20px 25px;
+  padding: 15px 25px;
   top: 0px;
   left: 0px;
 }
-/* line 183, ../sass/_main_style.scss */
+/* line 181, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
-  max-width: 150px;
+  max-width: 110px;
 }
-/* line 185, ../sass/_main_style.scss */
+/* line 183, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 189, ../sass/_main_style.scss */
+/* line 187, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 194, ../sass/_main_style.scss */
+/* line 192, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
-  padding: 10px 0;
+  padding: 5px 0;
+}
+/* line 196, ../sass/_main_style.scss */
+.fixed-nav .navi-box .contact-btn {
+  margin-right: 0px;
+  margin-left: 10px;
 }
 
-/* line 203, ../sass/_main_style.scss */
+/* line 206, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 206, ../sass/_main_style.scss */
+/* line 209, ../sass/_main_style.scss */
 .footer .footer-zone {
   background-color: #403e3a;
   padding: 35px;
 }
-/* line 211, ../sass/_main_style.scss */
+/* line 215, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
-  display: flex;
+  text-align: center;
 }
-/* line 215, ../sass/_main_style.scss */
+/* line 221, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
-  padding: 10px 25px;
-  width: 33.33%;
+  padding: 10px 35px;
+  display: inline-block;
+  vertical-align: middle;
 }
-/* line 220, ../sass/_main_style.scss */
+/* line 227, ../sass/_main_style.scss */
+.footer .container .box:nth-child(1) {
+  text-align: right;
+}
+/* line 231, ../sass/_main_style.scss */
+.footer .container .box:nth-child(3) {
+  text-align: left;
+}
+/* line 235, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
-  border-right: solid 1px #fff;
-  border-left: solid 1px #fff;
+  border-right: solid 1px rgba(255, 255, 255, 0.5);
+  border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 226, ../sass/_main_style.scss */
+/* line 241, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -289,23 +309,23 @@ p {
   height: 45px;
   width: 45px;
   line-height: 45px;
-  margin-top: 3px;
   text-align: center;
   transition: all 0.7s;
+  margin-right: 94px;
 }
-/* line 237, ../sass/_main_style.scss */
+/* line 252, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 244, ../sass/_main_style.scss */
+/* line 259, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 254, ../sass/_main_style.scss */
+/* line 269, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -314,7 +334,7 @@ p {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 262, ../sass/_main_style.scss */
+/* line 277, ../sass/_main_style.scss */
 .slogan p {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
@@ -328,7 +348,7 @@ p {
   text-orientation: upright;
 }
 
-/* line 276, ../sass/_main_style.scss */
+/* line 291, ../sass/_main_style.scss */
 .scroll-btn {
   border: solid 1px #fff;
   opacity: 0.5;
@@ -342,29 +362,29 @@ p {
   cursor: pointer;
   transition: opacity 0.7s;
 }
-/* line 289, ../sass/_main_style.scss */
+/* line 304, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
   transform: translateY(0px);
   transition: transform 0.7s;
 }
-/* line 296, ../sass/_main_style.scss */
+/* line 311, ../sass/_main_style.scss */
 .scroll-btn:hover {
   opacity: 1;
 }
-/* line 298, ../sass/_main_style.scss */
+/* line 313, ../sass/_main_style.scss */
 .scroll-btn:hover i {
   transform: translateY(3px);
 }
 
-/* line 304, ../sass/_main_style.scss */
+/* line 319, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 309, ../sass/_main_style.scss */
+/* line 324, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -372,25 +392,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 317, ../sass/_main_style.scss */
+/* line 332, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 321, ../sass/_main_style.scss */
+/* line 336, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 326, ../sass/_main_style.scss */
+/* line 341, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 330, ../sass/_main_style.scss */
+/* line 345, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 335, ../sass/_main_style.scss */
+/* line 350, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -398,45 +418,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 343, ../sass/_main_style.scss */
+/* line 358, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 348, ../sass/_main_style.scss */
+/* line 363, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 353, ../sass/_main_style.scss */
+/* line 368, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 360, ../sass/_main_style.scss */
+/* line 375, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 365, ../sass/_main_style.scss */
+/* line 380, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 370, ../sass/_main_style.scss */
+/* line 385, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 378, ../sass/_main_style.scss */
+/* line 393, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 382, ../sass/_main_style.scss */
+/* line 397, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -444,24 +464,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 390, ../sass/_main_style.scss */
+/* line 405, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 394, ../sass/_main_style.scss */
+/* line 409, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 402, ../sass/_main_style.scss */
+/* line 417, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 407, ../sass/_main_style.scss */
+/* line 422, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -469,11 +489,11 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 414, ../sass/_main_style.scss */
+/* line 429, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 418, ../sass/_main_style.scss */
+/* line 433, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
 }
