--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -61,7 +61,7 @@ p{
         
         &:hover{
             
-            background: $theme-color;
+            background: $theme-alert;
             color: #fff;
             
             i{
@@ -71,6 +71,7 @@ p{
         }
         
         i{
+            color: $theme-alert;
             font-size: 18px;
             line-height: 14px;
             margin-left: 5px;
@@ -207,8 +208,9 @@ p{
     color: #fff;
     
     .footer-zone{
-        background-color: $footer-color;
-//        background-image: url(../images/10footertexture.png);
+//        background-color: $footer-color;
+        background-image: url(../images/10footertexture.jpg);
+        background-repeat: repeat;
         padding: 35px;
     }
     
@@ -289,8 +291,7 @@ p{
 }
 
 .scroll-btn{
-    border: solid 1px #fff;
-    opacity: 0.5;
+    border: solid 1px rgba(256,256,256,0.5);
     position: absolute;
     bottom: 5%;
     left: 50%;
@@ -299,18 +300,21 @@ p{
     text-align: center;
     padding: 5px;
     cursor: pointer;
-    transition: opacity 0.7s;
+    transition: all 0.7s;
     
     i{
         color: #fff;
         font-size: 36px;
         transform: translateY(0px);
-        transition: transform 0.7s;
+        opacity: 0.5;
+        transition: all 0.7s;
     }
     
     &:hover{
-        opacity: 1;
+        border-color: rgba(256,256,256,1);
+        
         i{
+            opacity: 1;
             transform: translateY(3px);
         }
     }
@@ -432,6 +436,20 @@ p{
     
     .btn{
         border-color: #fff;
+        
+        i{
+            color: #fff;
+        }
+        
+        &:hover{
+            background: #fff;
+            color: $theme-alert;
+            border-color: $theme-alert;
+            
+            i{
+                color: $theme-alert;
+            }
+        }
     }
 }
 
