--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -127,7 +127,7 @@ p {
 }
 /* line 62, ../sass/_main_style.scss */
 .main-container .btn:hover {
-  background: #b28850;
+  background: #8a2b1e;
   color: #fff;
 }
 /* line 67, ../sass/_main_style.scss */
@@ -137,6 +137,7 @@ p {
 }
 /* line 73, ../sass/_main_style.scss */
 .main-container .btn i {
+  color: #8a2b1e;
   font-size: 18px;
   line-height: 14px;
   margin-left: 5px;
@@ -144,12 +145,12 @@ p {
   transition: all 0.7s;
 }
 
-/* line 86, ../sass/_main_style.scss */
+/* line 87, ../sass/_main_style.scss */
 .header {
   background-color: #4b4a47;
   min-height: 100vh;
 }
-/* line 90, ../sass/_main_style.scss */
+/* line 91, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -165,76 +166,76 @@ p {
   z-index: 0;
 }
 
-/* line 106, ../sass/_main_style.scss */
+/* line 107, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 111, ../sass/_main_style.scss */
+/* line 112, ../sass/_main_style.scss */
 .nav-zone:first-child {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 116, ../sass/_main_style.scss */
+/* line 117, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 120, ../sass/_main_style.scss */
+/* line 121, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 124, ../sass/_main_style.scss */
+/* line 125, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 129, ../sass/_main_style.scss */
+/* line 130, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 131, ../sass/_main_style.scss */
+/* line 132, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 134, ../sass/_main_style.scss */
+/* line 135, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 140, ../sass/_main_style.scss */
+/* line 141, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 144, ../sass/_main_style.scss */
+/* line 145, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 150, ../sass/_main_style.scss */
+/* line 151, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 157, ../sass/_main_style.scss */
+/* line 158, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 162, ../sass/_main_style.scss */
+/* line 163, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
 
-/* line 169, ../sass/_main_style.scss */
+/* line 170, ../sass/_main_style.scss */
 .no-opacity {
   opacity: 1 !important;
 }
 
-/* line 173, ../sass/_main_style.scss */
+/* line 174, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
@@ -244,64 +245,65 @@ p {
   top: 0px;
   left: 0px;
 }
-/* line 181, ../sass/_main_style.scss */
+/* line 182, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
   max-width: 110px;
 }
-/* line 183, ../sass/_main_style.scss */
+/* line 184, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 187, ../sass/_main_style.scss */
+/* line 188, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 192, ../sass/_main_style.scss */
+/* line 193, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
   padding: 5px 0;
 }
-/* line 196, ../sass/_main_style.scss */
+/* line 197, ../sass/_main_style.scss */
 .fixed-nav .navi-box .contact-btn {
   margin-right: 0px;
   margin-left: 10px;
 }
 
-/* line 206, ../sass/_main_style.scss */
+/* line 207, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 209, ../sass/_main_style.scss */
+/* line 210, ../sass/_main_style.scss */
 .footer .footer-zone {
-  background-color: #403e3a;
+  background-image: url(../images/10footertexture.jpg);
+  background-repeat: repeat;
   padding: 35px;
 }
-/* line 215, ../sass/_main_style.scss */
+/* line 217, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 221, ../sass/_main_style.scss */
+/* line 223, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
   padding: 10px 35px;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 227, ../sass/_main_style.scss */
+/* line 229, ../sass/_main_style.scss */
 .footer .container .box:nth-child(1) {
   text-align: right;
 }
-/* line 231, ../sass/_main_style.scss */
+/* line 233, ../sass/_main_style.scss */
 .footer .container .box:nth-child(3) {
   text-align: left;
 }
-/* line 235, ../sass/_main_style.scss */
+/* line 237, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
   border-right: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 241, ../sass/_main_style.scss */
+/* line 243, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -313,19 +315,19 @@ p {
   transition: all 0.7s;
   margin-right: 94px;
 }
-/* line 252, ../sass/_main_style.scss */
+/* line 254, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 259, ../sass/_main_style.scss */
+/* line 261, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 269, ../sass/_main_style.scss */
+/* line 271, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -334,7 +336,7 @@ p {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 277, ../sass/_main_style.scss */
+/* line 279, ../sass/_main_style.scss */
 .slogan p {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
@@ -348,10 +350,9 @@ p {
   text-orientation: upright;
 }
 
-/* line 291, ../sass/_main_style.scss */
+/* line 293, ../sass/_main_style.scss */
 .scroll-btn {
-  border: solid 1px #fff;
-  opacity: 0.5;
+  border: solid 1px rgba(255, 255, 255, 0.5);
   position: absolute;
   bottom: 5%;
   left: 50%;
@@ -360,31 +361,33 @@ p {
   text-align: center;
   padding: 5px;
   cursor: pointer;
-  transition: opacity 0.7s;
+  transition: all 0.7s;
 }
-/* line 304, ../sass/_main_style.scss */
+/* line 305, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
   transform: translateY(0px);
-  transition: transform 0.7s;
-}
-/* line 311, ../sass/_main_style.scss */
-.scroll-btn:hover {
-  opacity: 1;
+  opacity: 0.5;
+  transition: all 0.7s;
 }
 /* line 313, ../sass/_main_style.scss */
+.scroll-btn:hover {
+  border-color: white;
+}
+/* line 316, ../sass/_main_style.scss */
 .scroll-btn:hover i {
+  opacity: 1;
   transform: translateY(3px);
 }
 
-/* line 319, ../sass/_main_style.scss */
+/* line 323, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 324, ../sass/_main_style.scss */
+/* line 328, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -392,25 +395,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 332, ../sass/_main_style.scss */
+/* line 336, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 336, ../sass/_main_style.scss */
+/* line 340, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 341, ../sass/_main_style.scss */
+/* line 345, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 345, ../sass/_main_style.scss */
+/* line 349, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 350, ../sass/_main_style.scss */
+/* line 354, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -418,45 +421,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 358, ../sass/_main_style.scss */
+/* line 362, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 363, ../sass/_main_style.scss */
+/* line 367, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 368, ../sass/_main_style.scss */
+/* line 372, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 375, ../sass/_main_style.scss */
+/* line 379, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 380, ../sass/_main_style.scss */
+/* line 384, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 385, ../sass/_main_style.scss */
+/* line 389, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 393, ../sass/_main_style.scss */
+/* line 397, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 397, ../sass/_main_style.scss */
+/* line 401, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -464,24 +467,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 405, ../sass/_main_style.scss */
+/* line 409, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 409, ../sass/_main_style.scss */
+/* line 413, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 417, ../sass/_main_style.scss */
+/* line 421, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 422, ../sass/_main_style.scss */
+/* line 426, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -489,11 +492,25 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 429, ../sass/_main_style.scss */
+/* line 433, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 433, ../sass/_main_style.scss */
+/* line 437, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
+}
+/* line 440, ../sass/_main_style.scss */
+.index-conceptstore-container .btn i {
+  color: #fff;
+}
+/* line 444, ../sass/_main_style.scss */
+.index-conceptstore-container .btn:hover {
+  background: #fff;
+  color: #8a2b1e;
+  border-color: #8a2b1e;
+}
+/* line 449, ../sass/_main_style.scss */
+.index-conceptstore-container .btn:hover i {
+  color: #8a2b1e;
 }
