--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -561,4 +561,9 @@ p {
   .header .slogan p {
     font-size: 18px;
   }
+
+  /* line 48, ../sass/_media.scss */
+  .index-about-container {
+    padding-top: 0px;
+  }
 }
