--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -142,6 +142,7 @@
                 width: 100%;
                 
                 a{
+                    font-size: 16px;
                     padding: 0px;
                     margin: 0px;
                     display: block;
