--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -145,8 +145,8 @@
                     font-size: 16px;
                     padding: 0px;
                     margin: 0px;
-                    display: block;
                     text-align: center;
+                    font-family: serif!important;
                 }
                 
                 &:nth-child(2){
