--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -723,8 +723,8 @@ p {
     font-size: 16px;
     padding: 0px;
     margin: 0px;
-    display: block;
     text-align: center;
+    font-family: serif !important;
   }
   /* line 152, ../sass/_media.scss */
   .footer .container .box:nth-child(2) {
